package Proyecto;
import lombok.Getter;
import lombok.ToString;
@Getter @ToString
public enum TipoUsuario {
    ARTISTA, VISITANTE, ORGANIZADOR
}
